Unify all file load/save dialogs
Allow the user to choose Java vs native-platform dialogs

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -82,6 +82,10 @@ action.importImmediately.shortDescription=When scanning codes, immediately impor
 action.rescanImmediately.name=Resume Scan Immediately
 action.rescanImmediately.shortDescription=After inserting data, immediately start the camera scanner again.
 
+action.usePlatformFileDialogs.name=Use Platform File Dialogs
+action.usePlatformFileDialogs.shortDescription=Use the native platform file dialogs instead of Java ones.
+action.usePlatformFileDialogs.mnemonic=d
+
 action.editDatabase.name=Edit Database...
 action.editDatabase.shortDescription=View and modify previously-stored data in the database.
 
