Add ability to purge records marked for deletion

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -89,6 +89,9 @@ action.usePlatformFileDialogs.mnemonic=d
 action.editDatabase.name=Edit Database...
 action.editDatabase.shortDescription=View and modify previously-stored data in the database.
 
+action.purgeDatabase.name=Purge Database
+action.purgeDatabase.shortDescription=Purge all records marked for deletion from the database.
+
 action.help.name=Help
 action.help.mnemonic=h
 
